Add layout user and layout admin Add database from sql server

--- a/WebShop/Views/Shared/_LayoutUser.cshtml
+++ b/WebShop/Views/Shared/_LayoutUser.cshtml
@@ -166,6 +166,14 @@
     <!-- Header Section End -->
 
     @RenderBody() <!--Main-->
+    <!-- Hero Section Begin -->
+    <section class="hero">
+        <div class="container">
+            @Html.Action("LeftMenu", "Home");
+        </div>
+    </section>
+
+    <!-- Hero Section End -->
     <!-- Footer Section Begin -->
     <footer class="footer spad">
         <div class="container">
