--- a/WebShop/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/WebShop/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -206,7 +206,7 @@
                     Activity Log
                 </a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                <a class="dropdown-item" href="~/Admin/logout" >
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                     Logout
                 </a>
@@ -322,30 +322,31 @@
 </div>
 <style>
     .paging-center {
-        width: 17%;
+        width: 14%;
         margin: auto;
         text-align: center;
     }
+
     .container {
         width: 500px;
         margin: auto;
         text-align: center;
     }
-    
+
     .pagination a {
         color: black;
         float: left;
         padding: 8px 16px;
         text-decoration: none;
     }
-    /*set the style for the active class*/ 
-    .pagination .active{
+    /*set the style for the active class*/
+    .pagination .active {
         background-color: #4CAF50;
         color: black;
         border-radius: 50%;
     }
-    
-    /*add background color when user hovers on inactive class*/ 
+
+    /*add background color when user hovers on inactive class*/
     .pagination a:hover:not(.active) {
         background-color: chartreuse;
         border-radius: 50%;
